@@ -3,8 +3,8 @@
   <?php echo "<?php exit(); ?>"; ?>
 * support implementations of prefiltes, mods, and others as class methods.
 * possibly implement default modifiers that apply to variables upon display
-* think about possibility of supporting something like {$data[foo].$key[bar]}
 * ability to concatenate values/strings together
 * fix all E_NOTICE warnings
 * make simple math easier
 * caching all but parts of the template
+* change plugins so $smarty variable always comes first
